# python

./: .gitignore  CMakeLists.txt
Include/: pystate.h
Modules/: posixmodule.c  timemodule.c
Modules/_ctypes/: CMakeLists.txt
Objects/: dictobject.c
PC/: dl_nt.c  pyconfig.h  python_nt.rc  pythonnt_rc.h
PC/VS9.0/: pyproject.vsprops  readme.txt
PC/bdist_wininst/: bdist_wininst.vcxproj
PCbuild/: _bsddb.vcxproj  _ctypes.vcxproj  _ctypes_test.vcxproj  _elementtree.vcxproj  _hashlib.vcxproj  _msi.vcxproj  _multiprocessing.vcxproj  _socket.vcxproj  _sqlite3.vcxproj  _ssl.vcxproj  _testcapi.vcxproj  _tkinter.vcxproj  bz2.vcxproj  env.bat  get_externals.bat  libeay.vcxproj  pcbuild.sln  pyexpat.vcxproj  python.vcxproj  pythoncore.vcxproj  pythonw.vcxproj  readme.txt  select.vcxproj  sqlite3.vcxproj  ssleay.vcxproj  tix.vcxproj  tk.vcxproj  unicodedata.vcxproj  w9xpopen.vcxproj  winsound.vcxproj
Python/: pystate.c
cmake/: python-config.cmake
